--- a/keyword-wrangler/src/frontend/index.html
+++ b/keyword-wrangler/src/frontend/index.html
@@ -28,7 +28,6 @@
     <script src="app/app.js"></script>
     <script src="app/lib/resolveEntity.js"></script>
     <script src="app/lib/RepositoryFactory.js"></script>
-    <!--<script src="app/keywords/KeywordsController.js"></script>-->
-    <script src="app/KeywordsController.js"></script>
+    <script src="app/keywords/KeywordsController.js"></script>
   </body>
 </html>
